[2023] Solution for day 4