@@ -4,7 +4,6 @@
 package com.github.kfarnung.adventofcode.aoc2023.day01;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
@@ -15,7 +14,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 class AppTest {
     @Test
     void testGetPart1() throws IOException {
-        List<String> lines = Arrays.asList(
+        List<String> lines = List.of(
                 "1abc2",
                 "pqr3stu8vwx",
                 "a1b2c3d4e5f",
@@ -28,7 +27,7 @@ class AppTest {
 
     @Test
     void testGetPart2() throws IOException {
-        List<String> lines = Arrays.asList(
+        List<String> lines = List.of(
                 "two1nine",
                 "eightwothree",
                 "abcone2threexyz",
